# epstein-files-analyzer

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt  run.py
frontend/: index.html
frontend/css/: styles.css
frontend/js/: app.js
src/epstein_analyzer/: __init__.py  analyzer.py  app.py  config.py  database.py  dates.py  desktop.py  downloader.py  extractor.py  models.py  search.py
